<resources>
    <string name="app_name">tempic_practice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="register">Đăng ký</string>
    <string name="title_register">Temptic, mọi điều về review mỹ phẩm!\n Rất vui được gặp bạn: D</string>
    <string name="start_text">Temptic, mọi điều về review mỹ phẩm!</string>
    <string name="register_with_phone_number">Đăng ký bằng số điện thoại di động của bạn</string>
    <string name="register_with_kakao">Đăng ký KakaoTalk</string>
    <string name="register_with_naver">Đăng ký làm thành viên với Naver ID</string>
    <string name="register_with_google">Đăng ký bằng ID Google của bạn</string>
    <string name="have_account">Bạn đã có sẵn tài khoản?</string>
    <string name="login">Đăng nhập</string>
    <string name="your_name">Họ tên của bạn (Tiếng Hàn/Anh, ít nhất 2-10 ký tự)</string>
    <string name="your_phone">Số điện thoại di động của bạn</string>
    <string name="send_code">Gửi mã xác nhận</string>
    <string name="time">02:59</string>
    <string name="enter_otp">Nhập mã số xác nhận</string>
    <string name="pass">Mật khẩu</string>
    <string name="re_pass">Nhập lại mật khẩu để xác nhận</string>
    <string name="law_register">Bằng cách tiếp tục, bạn xác nhận rằng bạn đồng ý với Điều khoản sử dụng của Temtic và đã đọc Chính sách quyền riêng tư của chúng tôi để xác định cách chúng tôi thu thập, sử dụng và chia sẻ dữ liệu của bạn.</string>
    <string name="check_agree">Đồng ý nhận thông tin tiếp thị (tùy chọn)</string>
    <string name="agree_info">Đồng ý nhận thông tin tiếp thị</string>
    <string name="agree_if">(Nếu bạn đồng ý, bạn có thể nhận được nhiều phiếu giảm giá khác nhau và thông tin sự kiện đầy quyền lợi)</string>
    <string name="agree_one">1. Mục đích sử dụng thông tin cá nhân\n - Thông tin về dịch vụ mới / sản phẩm mới hoặc sự kiện\n - Cung cấp dữ liệu cần thiết cho hoạt động kinh doanh để cung cấp các dịch vụ được cá nhân hóa và các dịch vụ bổ sung</string>
    <string name="agree_two">2. Các mặt hàng sưu tập\n - Tên, giới tính, ngày sinh, số điện thoại di động, số điện thoại, địa chỉ, e-mail</string>
    <string name="agree_three">3. Thời gian lưu giữ thông tin cá nhân \n- Cho đến thời điểm có biểu hiện từ chối cung cấp thông tin hoặc rút tư cách thành viên</string>
    <string name="complete_register">Hoàn tất đăng ký</string>
    <string name="congratulation_comp_register">Chúc mừng bạn đã tạo tài khoản thành công!\nBây giờ bạn có thể viết đánh giá sản phẩm và sử dụng nhiều tính năng khác.</string>
</resources>
