<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.tempic_practice.presentation.widget.header.HeaderView
            android:id="@+id/hvRegisterWithPhoneFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ic_hv_left="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:text_header="@string/register" />

        <LinearLayout
            android:id="@+id/llRegisterWithPhoneFragment"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="32dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hvRegisterWithPhoneFragment">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRegisterWithPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_register" />

            <com.example.tempic_practice.presentation.widget.edittextview.EditTextView
                android:id="@+id/edtvRegisterPhoneYourName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                app:hint_text="@string/your_name" />

            <com.example.tempic_practice.presentation.widget.edittextview.EditTextView
                android:id="@+id/edtvRegisterPhoneYourPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hint_text="@string/your_phone"
                app:text_button="@string/send_code" />

            <com.example.tempic_practice.presentation.widget.edittextview.EditTextView
                android:id="@+id/edtvRegisterPhoneYourOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hint_text="@string/enter_otp"
                app:text_right="@string/time" />

            <com.example.tempic_practice.presentation.widget.edittextview.EditTextView
                android:id="@+id/edtvRegisterPhoneYourPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hint_text="@string/pass" />

            <com.example.tempic_practice.presentation.widget.edittextview.EditTextView
                android:id="@+id/edtvRegisterPhoneYourRePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hint_text="@string/re_pass" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivRegisterCheckLaw"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_checked" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosan_regular"
                    android:text="@string/law_register"
                    android:textColor="@color/color_confirm_text"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivRegisterCheckAgree"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_check" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosan_regular"
                    android:text="@string/check_agree"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivRegisterQuestion"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_question" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegisterPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:background="@drawable/shape_corner_4_blue_bg"
                android:fontFamily="@font/notosan_bold"
                android:foreground="?selectableItemBackgroundBorderless"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
