<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/frlEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEditTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:fontFamily="@font/notosan_regular"
            android:gravity="start|center_vertical"
            android:hint="@string/your_name"
            android:minLines="1"
            android:paddingHorizontal="12dp"
            android:paddingVertical="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEditTextTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="2dp"
            android:fontFamily="@font/notosan_regular"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="@color/text_right_color"
            android:textSize="14sp"
            android:visibility="gone" />

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEditTextOtp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:background="@color/bg_button_color"
        android:fontFamily="@font/notosan_regular"
        android:foreground="?selectableItemBackgroundBorderless"
        android:gravity="center"
        android:text="@string/send_code"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/edtEditTextUserName"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>
